src/snapshots/bl__tests__snapshots__cmd_sleep.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Pause execution for a number of milliseconds

Usage: bl sleep [OPTIONS] <ms>

Arguments:
  <ms>  Number of milliseconds to pause

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl sleep 1000
  # Wait 1 second

  bl sleep 500
  # Wait 500ms
