src/snapshots/bl__tests__snapshots__cmd_text.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Get text content of the page or an element

Usage: bl text [OPTIONS] [args]...

Arguments:
  [args]...  CSS selector, or a URL to navigate to first (optionally followed by a selector)

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl text
  # Get all page text

  bl text "h1"
  # Get text of a specific element

  bl text https://example.com
  # Navigate then get all page text

  bl text https://example.com "h1"
  # Navigate then get element text
