src/snapshots/bl__tests__snapshots__cmd_title.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Get the current page title

Usage: bl title [OPTIONS]

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl title
  # Prints: Example Domain
