src/snapshots/bl__tests__snapshots__cmd_uncheck.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Uncheck a checkbox

Usage: bl uncheck [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector (or map ref) for the checkbox

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl uncheck "input[name=agree]"
  # Uncheck the "agree" checkbox (idempotent)
